# da-synth

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTEXT.md  debug_qa_verdicts.jsonl  pyproject.toml
.claude/skills/qa-improve/: SKILL.md
.claude/skills/summarization-improve/: SKILL.md
.github/workflows/: ci.yml
assets/: qa_judge_examples.jsonl  qa_judge_rejection_examples.jsonl  qa_rejection_examples.jsonl  summarization_judge_rejection_examples.jsonl
assets/names/: first_names_female.txt  first_names_male.txt  last_names.txt
assets/qa_examples/: 001.json  002.json  003.json  004.json  005.json  006.json  007.json  008.json  009.json  010.json
assets/system_prompts/: qa.txt
configs/qa/: danish_wikipedia.yaml  eur_lex.yaml
configs/summarization/: danish_wikipedia.yaml  eur_lex_sum.yaml  nordjylland_news.yaml
configs/translation/: eur_lex.yaml  eur_lex_da_en.yaml  eur_lex_en_da.yaml
docs/adr/: 0001-few-shot-over-negative-rules.md  0002-always-generate-never-use-gold-targets.md
docs/dataset_types/: qa.md  summarization.md  translation.md
docs/datasets/: dynaword.md
docs/styles/: qa.md  summarization.md
docs/wiki/: grounded.md  qa.md  translation.md
samples/: qa.jsonl
src/synth_da/: __init__.py  cache.py  cli.py  client.py  config.py  filters.py  personas.py  pipeline.py  preprocess.py
src/synth_da/scripts/: generate_personas.py  translate_dolci.py
src/synth_da/styles/: __init__.py  base.py  qa.py  summarization.py  translation.py
tests/: test_config.py  test_filters.py  test_preprocess.py
